# ranchero

./: .gitignore  .pylintrc  C_auris_metadata_compilation.py  Coccidioides_genus_SRA_filtered_rc31.tsv  Coccidioides_genus_SRA_filtered_rc31_just_samples.tsv  README.md  TB_metadata_compilation.py  TB_metadata_no_inject.py  build.sh  demo.py  final_final_final_counts.py  main.py  my_very_cool_c_auris_metadata.tsv  requirements.txt  setup.py  simple-value-counts.py  standardize_any_bigquery_json.py  tba5_per_sample.tsv  testing.py  tests.py  todo.md  zeroth.tsv  zeroth_per_sample.tsv
src/: __init__.py  analyze.py  config.py  config.yaml  def flatten_all_list_cols_as_much_as_possible(sel.py  extract.py  junkyard.py  merge.py  neigh.py  pandas.py  pyproject.toml  read_file.py  standardize.py  tests.py  verify.py
src/dictionaries/: columns.py  countries.py  drop_zone.py  host_species.py  null_values.py  sample_sources.py  tuberculosis_lineages.py  tuberculosis_organisms.py
src/ranchero/: __init__.py  config.py  config.yaml  merge.py  neigh.py  query.py  read_file.py  standardize.py
src/ranchero/experimental/: concat_list_experimental.py
src/ranchero/statics/: countries.py  drop_zone.py  host_disease.py  kolumns.py  null_values.py  regions.py  sample_sources.py  sample_sources_wrong_column.py
src/statics/: countries.py  drop_zone.py  generated_taxoncore_dictionary.py  host_species.py  kolumns.py  null_values.py  regions.py  sample_sources.py  tuberculosis_lineages.py  tuberculosis_organisms.py  tuberculosis_organisms_exhaustive.py  tuberculosis_taxonomy.py
(+48 files in other folders)
